# annotation-robot-robocup

./: .gitignore  .gitmodules  README.md
json_files/: annotation_settings.json  annotation_settings.json~  eirlab.json  match_settings.json
memoire/: annexe.tex  architecture.tex  besoins.tex  bibli.bib  conclusion.tex  fonctionnalites.tex  introduction.tex  main.tex  problemes.tex  tests.tex
rapports/: liens_utiles.txt  main.tex
rapports/UML/: Robocup.vpp  RobocupClear.vpp  RobocupMin.vpp
workspace/.catkin_tools/profiles/default/: devel_collisions.txt
workspace/src/annotateImage/: CMakeLists.txt  package.xml
workspace/src/annotateImage/include/annotateImage/: annotation.h  direction.h  position.h  robotInformation.h  team.h
workspace/src/annotateImage/src/annotateImage/: annotation.cpp  direction.cpp  position.cpp  robotInformation.cpp  team.cpp
workspace/src/annotateImage/tools/: init.cpp  test.cpp  test_annotateImage.cpp  test_time.cpp  test_video.cpp
workspace/src/build-interface-Desktop-Debug/: Makefile  interface  moc_mainwindow.cpp
workspace/src/hl_monitoring/tools/: basic_monitoring.cpp
workspace/src/interface/: CMakeLists.txt  interface.pro  main.cpp  mainwindow.cpp  mainwindow.h  package.xml
workspace/src/interface/include/interface/: mainwindow.h
workspace/src/interface/src/interface/: choiceComboBox.cpp  choiceComboBox.h  choiceDialog.cpp  choiceDialog.h  choiceDialogComboBox.cpp  choiceDialogComboBox.h  main.cpp  mainwindow.cpp  mainwindow.h  robotBoard.cpp  robotBoard.h  robotPanel.cpp  robotPanel.h  sources.cmake  teamBoard.cpp  teamBoard.h  teamPanel.cpp  teamPanel.h
workspace/src/interface/src/interface/_old/: mainwindow.cpp
workspace/src/interface/tools/: main.cpp
workspace/src/traitement/: CMakeLists.txt  package.xml
workspace/src/traitement/include/traitement/: annotation.h  direction.h  position.h  robotAnnotation.h  robotInformation.h  team.h
workspace/src/traitement/src/traitement/: annotation.cpp  direction.cpp  position.cpp  robotAnnotation.cpp  robotInformation.cpp  sources.cmake  team.cpp
workspace/src/traitement/tools/: annotation.cpp  init.cpp  test.cpp  test_time.cpp  test_traitement.cpp  test_video.cpp
